Fixup README.org formatting, add note on win32 linking.

--- a/README.org
+++ b/README.org
@@ -1,19 +1,23 @@
+#+options: html-postamble:nil
+
 * Building
 
 ** Windows
 
 Building for Windows via MinGW on Linux requires libusb static library and
-header to be present under libusb/ in the source tree. Given the libusb 1.0.19
+header to be present under =libusb/= in the source tree. Given the libusb 1.0.19
 Windows binary distribution (libusb-1.0.19.7z), which looks like this...
 
-    include/libusb-1.0/libusb.h
-    MinGW32/static/libusb-1.0.a
-    [other things we don't care about]
+: include/libusb-1.0/libusb.h
+: MinGW32/static/libusb-1.0.a
+: [other things we don't care about]
 
-...the libusb/ directory here must look like this:
+...the =libusb/= directory here must look like this:
 
-    libusb.h
-    libusb-1.0.a
+: libusb.h
+: libusb-1.0.a
+
+Dynamically linking libusb is currently unsupported.
 
 ** Darwin
 
