Dynamically linking libusb works.
This is preferred over static linking.

--- a/README.org
+++ b/README.org
@@ -9,15 +9,15 @@ header to be present under =libusb/= in the source tree. Given the libusb 1.0.19
 Windows binary distribution (libusb-1.0.19.7z), which looks like this...
 
 : include/libusb-1.0/libusb.h
-: MinGW32/static/libusb-1.0.a
+: MinGW32/dll/libusb-1.0.dll
+: MinGW32/dll/libusb-1.0.dll.a
 : [other things we don't care about]
 
 ...the =libusb/= directory here must look like this:
 
 : libusb.h
-: libusb-1.0.a
-
-Dynamically linking libusb is currently unsupported.
+: libusb-1.0.dll
+: libusb-1.0.dll.a
 
 ** Darwin
 
