--- a/README.org
+++ b/README.org
@@ -24,9 +24,13 @@ toolchains is completely unsupported and probably impossible.
 
 A fully functional libantumbra build consists of:
 
-- ~libantumbra.dll~
-- ~libusb-1.0.dll~ (from ~libusb/~)
-- ~antumbratool.exe~
+: libantumbra.dll
+: libusb-1.0.dll
+: antumbratool.exe
+: glowdrvinst/
+:   glowdrvinst.exe
+:   libwdi.dll
+:   msvcr120.dll
 
 ** Darwin
 
@@ -82,6 +86,15 @@ We link against system libusb using flags provided by ~pkg-config~. The
 ~libusb/~ directory is not used.
 
 * OS requirements
+
+** Windows
+
+No drivers are required. libusb can access USB devices using the built-in WinUSB
+API. However, the WinUSB driver must be "installed" (i.e. registered via INF
+file) for a given device before it can be used, otherwise all I/O will fail.
+
+~glowdrvinst.exe~ installs the WinUSB driver for Glow devices. *Driver
+installation requires that at least one device be plugged in.*
 
 ** Linux
 
